# ml_ops

./: .gitignore  README.md  data.dvc  frontend.py  model_skeleton.py  pyproject.toml  tasks.py
.devcontainer/: devcontainer.json
.dvc/: config
.github/workflows/: docker-build.yaml  linting.yaml  tests.yaml
.streamlit/: config.toml
configs/: data.yaml  model.yaml  preprocess.yaml  train.yaml
dockerfiles/: api.dockerfile  data.dockerfile  frontend.dockerfile  train.dockerfile
docs/: mkdocs.yaml
models/: vocab.pt
outputs/2026-01-15/12-08-29/.hydra/: config.yaml  hydra.yaml
outputs/2026-01-15/12-17-12/.hydra/: config.yaml  hydra.yaml
reports/profiling/: train_profile.prof  train_profile.txt
src/ml_ops_project/: data.py  evaluate.py  model.py  preprocess.py  tokenizer.py  train.py  visualize.py
tests/: test_data.py  test_model.py  test_tokenizer.py  test_train.py
