[build-system]
requires = ["uv_build>=0.9.22,<0.10.0"]
build-backend = "uv_build"

[project]
name = "ml_ops_project"
version = "0.0.1"
description = "Machine Learning Operation Project"
authors = [
  { name = "Group 46", email = "your@email.com" },
]
keywords = ["machine learning", "MLOps"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
]
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "datasets>=4.4.2",
    "dvc>=3.66.1",
    "dvc-gdrive>=3.0.1",
    "dvc-gs>=3.0.2",
    "fastapi==0.115.6",
    "hydra-core>=1.3.2",
    "loguru>=0.7.3",
    "matplotlib>=3.10.8",
    "pillow>=12.1.0",
    "torch>=2.10.0.dev20251211",
    "torchvision>=0.25.0.dev20251124",
    "typer==0.15.1",
    "uvicorn==0.34.0",
]

[dependency-groups]
dev = [
    "coverage==7.6.9",
    "invoke==2.2.0",
    "mkdocs-material==9.4.6",
    "mkdocs==1.6.1",
    "pre-commit==4.1.0",
    "pytest==8.3.4",
    "ruff==0.1.3",
    "mkdocstrings-python==1.12.2",
    "mypy>=1.19.1",
]

[[tool.uv.index]]
name = "pytorch-nightly-cu128"
url = "https://download.pytorch.org/whl/nightly/cu128"
explicit = true

[[tool.uv.index]]
name = "pytorch-nightly-cpu"
url = "https://download.pytorch.org/whl/nightly/cpu"
explicit = true

[tool.ruff]
line-length = 120
lint.select = ["I"]

[tool.coverage.run]
omit = ["tests/*"]

[[tool.mypy.overrides]]
module = ["torchvision", "torchvision.*"]
ignore_missing_imports = true

[tool.uv.sources]
torch = [
  # Windows: Use CUDA 12.8 (GPU)
  { index = "pytorch-nightly-cu128", marker = "sys_platform == 'win32'" },
  # Linux & macOS: Use CPU (Fixes CI failure)
  { index = "pytorch-nightly-cpu", marker = "sys_platform != 'win32'" }
]
torchvision = [
  { index = "pytorch-nightly-cu128", marker = "sys_platform == 'win32'" },
  { index = "pytorch-nightly-cpu", marker = "sys_platform != 'win32'" }
]

[tool.uv]
environments = [
    "sys_platform == 'linux'",
    "sys_platform == 'win32'",
    "sys_platform == 'darwin'"
]
[project.scripts]
download-data = "ml_ops_project.data:download_data"
train-model = "ml_ops_project.train:train"
